qa refined