@@ -1,22 +1,46 @@
 package com.ai.qa.service.application.dto;
 
-import lombok.Builder;
-import lombok.Value;
-
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
-@Value
-@Builder
 public class ChatCompletionCommand {
-    Long userId;
-    Long sessionId;
-    String sessionTitle;
-    String question;
-    @Builder.Default
-    List<HistoryMessage> history = List.of();
+    private final Long userId;
+    private final Long sessionId;
+    private final String sessionTitle;
+    private final String question;
+    private final List<HistoryMessage> history;
+
+    private ChatCompletionCommand(Builder builder) {
+        this.userId = builder.userId;
+        this.sessionId = builder.sessionId;
+        this.sessionTitle = builder.sessionTitle;
+        this.question = builder.question;
+        this.history = Collections.unmodifiableList(new ArrayList<>(builder.history));
+    }
+
+    public Long getUserId() {
+        return userId;
+    }
+
+    public Long getSessionId() {
+        return sessionId;
+    }
+
+    public String getSessionTitle() {
+        return sessionTitle;
+    }
+
+    public String getQuestion() {
+        return question;
+    }
+
+    public List<HistoryMessage> getHistory() {
+        return history;
+    }
 
     public ChatCompletionCommand withSessionId(Long resolvedSessionId) {
-        return ChatCompletionCommand.builder()
+        return builder()
                 .userId(userId)
                 .sessionId(resolvedSessionId)
                 .sessionTitle(sessionTitle)
@@ -25,10 +49,85 @@ public class ChatCompletionCommand {
                 .build();
     }
 
-    @Value
-    @Builder
+    public static Builder builder() {
+        return new Builder();
+    }
+
+    public static class Builder {
+        private Long userId;
+        private Long sessionId;
+        private String sessionTitle;
+        private String question;
+        private List<HistoryMessage> history = new ArrayList<>();
+
+        public Builder userId(Long userId) {
+            this.userId = userId;
+            return this;
+        }
+
+        public Builder sessionId(Long sessionId) {
+            this.sessionId = sessionId;
+            return this;
+        }
+
+        public Builder sessionTitle(String sessionTitle) {
+            this.sessionTitle = sessionTitle;
+            return this;
+        }
+
+        public Builder question(String question) {
+            this.question = question;
+            return this;
+        }
+
+        public Builder history(List<HistoryMessage> history) {
+            this.history = history == null ? new ArrayList<>() : new ArrayList<>(history);
+            return this;
+        }
+
+        public ChatCompletionCommand build() {
+            return new ChatCompletionCommand(this);
+        }
+    }
+
     public static class HistoryMessage {
-        String role;
-        String content;
+        private final String role;
+        private final String content;
+
+        private HistoryMessage(Builder builder) {
+            this.role = builder.role;
+            this.content = builder.content;
+        }
+
+        public String getRole() {
+            return role;
+        }
+
+        public String getContent() {
+            return content;
+        }
+
+        public static Builder builder() {
+            return new Builder();
+        }
+
+        public static class Builder {
+            private String role;
+            private String content;
+
+            public Builder role(String role) {
+                this.role = role;
+                return this;
+            }
+
+            public Builder content(String content) {
+                this.content = content;
+                return this;
+            }
+
+            public HistoryMessage build() {
+                return new HistoryMessage(this);
+            }
+        }
     }
 }
